# circle-debug

./: Cargo.toml  INSTALL.md  README.md  error_patterns.md  example-usage.sh
src/: error.rs  lib.rs  main.rs
