[package]
name = "circle_debug"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cdb"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
regex = "1.11"
