[package]
name = "circle-debug"
version = "0.1.0"
edition = "2021"
authors = ["Silouan Wright <silouan.wright@example.com>"]
description = "A CLI tool for quickly debugging CircleCI build failures with smart error detection and contextual suggestions"
documentation = "https://docs.rs/circle-debug"
homepage = "https://github.com/silouanwright/circle-debug"
repository = "https://github.com/silouanwright/circle-debug"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["circleci", "ci", "debugging", "cli", "devtools"]
categories = ["command-line-utilities", "development-tools::debugging"]

[[bin]]
name = "cdb"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
regex = "1.11"
